🐛 Fixed email button alignment in Chrome

--- a/frontend/shared/components/src/editor/email.mixin.scss
+++ b/frontend/shared/components/src/editor/email.mixin.scss
@@ -110,6 +110,7 @@
         line-height: 42px;
         font-size: 16px; 
         font-weight: bold;
+        text-box-trim: none; // Breaks line height trick
 
         &:active {
             transform: none;
